--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Call Blocker</string>
     <string name="blocked_contacts">Blocked Contacts</string>
+    <string name="history">History</string>
+    <string name="enter_mobile_number">Enter mobile number</string>
+    <string name="choose_from_contact_list">Choose from Contact List</string>
+    <string name="add_to_blocklist">Add to blocklist</string>
+    <string name="blocklist">BlockList</string>
 </resources>
